[package]
name = "anonymity-network"
version = "0.1.1"
authors = ["Rafael <rvillegasm@eafit.edu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1"

reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

dotenv = "0.15.0"
failure = "0.1.7"